--- a/hello_app/Gemfile
+++ b/hello_app/Gemfile
@@ -5,6 +5,9 @@ source 'https://rubygems.org'
 gem 'rails', '4.2.1'
 # Use postgresql as the database for Active Record
 gem 'pg'
+# rails_12factor Used by Heroku to serve static assets such as images and stylesheets.
+gem 'rails_12factor', group: :production
+
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
 # Use Uglifier as compressor for JavaScript assets
