--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -32,6 +32,9 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
+# Heroku lib dependency
+gem 'rails_12factor'
+
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
@@ -42,7 +45,10 @@ group :development, :test do
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
   gem 'spring'
 
-  # Rest-Client
-  gem 'rest-client', '~> 1.8.0'
+  # Rspec
+  gem 'rspec-rails'
+
+  # Guard-rspec for automated rspec testing.
+  gem 'guard-rspec', require: false
 end
 
