--- a/sample_app/Gemfile
+++ b/sample_app/Gemfile
@@ -7,6 +7,8 @@ gem 'rails', '4.2.1'
 gem 'pg'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
+# Bootstrap-saas for using bootstrap in this app
+gem 'bootstrap-sass'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
@@ -33,7 +35,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 # gem 'capistrano-rails', group: :development
 
 # Heroku lib dependency
-gem 'rails_12factor'
+gem 'rails_12factor', group: :production
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -43,7 +45,7 @@ group :development, :test do
   gem 'web-console', '~> 2.0'
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem 'spring'
+  gem 'spring', '>= 1.3.5'
 
   # Rspec
   gem 'rspec-rails'
@@ -52,7 +54,7 @@ group :development, :test do
   gem 'guard-rspec', require: false
 
   # Guard-livereload for automated browser reload on view changes.
-  gem 'guard-livereload'
+  gem 'guard-livereload', require: false
 
   # Pry for debbuging errors
   gem 'pry'
