--- a/micro-reddit/Gemfile
+++ b/micro-reddit/Gemfile
@@ -8,6 +8,8 @@ gem 'pg'
 gem 'sass-rails', '~> 5.0'
 # Foundation 5 zurb gem for Responsive.
 gem 'foundation-rails'
+# Slick Carousel for rails.
+gem "jquery-slick-rails"
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
