--- a/re-former/Gemfile
+++ b/re-former/Gemfile
@@ -5,12 +5,10 @@ source 'https://rubygems.org'
 gem 'rails', '4.2.1'
 # Use postgresql as the database for Active Record
 gem 'pg'
-# Encryption for passwords
-gem 'bcrypt'
 # Use SCSS for stylesheets
 gem 'sass-rails', '~> 5.0'
-# Bootstrap-saas for using bootstrap in this app
-gem 'bootstrap-sass'
+# Foundation 5 zurb gem for Responsive.
+gem 'foundation-rails'
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
 # Use CoffeeScript for .coffee assets and views
@@ -36,9 +34,6 @@ gem 'unicorn-rails'
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
-# Heroku lib dependency
-gem 'rails_12factor', group: :production
-
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
   gem 'byebug'
@@ -47,7 +42,7 @@ group :development, :test do
   gem 'web-console', '~> 2.0'
 
   # Spring speeds up development by keeping your application running in the background. Read more: https://github.com/rails/spring
-  gem 'spring', '>= 1.3.5'
+  gem 'spring'
 
   # Rspec
   gem 'rspec-rails'
